--- a/ubskin_web_django/templates/order/a_order_manage.html
+++ b/ubskin_web_django/templates/order/a_order_manage.html
@@ -84,7 +84,7 @@
                     <td>{{ stock.recv_code }} - {{ stock.recv_addr }}</td>
                     <td>{{ stock.code_count }}</td>
                     <td>{% parse_timestamps stock.create_time %}</td>
-                    <td><a href="#modalItemCodes" data-toggle="modal" data-target="#modalItemCodes" data-batchid="{{ stock.stock_id }}">详情</a></td>
+                    <td><a href="#modalItemCodes" data-toggle="modal" data-target="#modalItemCodes" data-batchid="{{ stock.stock_batch_id }}">详情</a></td>
                 </tr>
                 {% endfor %}
                 </tbody>
