--- a/ubskin_web_django/templates/order/a_jm_stock_batch_info.html
+++ b/ubskin_web_django/templates/order/a_jm_stock_batch_info.html
@@ -15,7 +15,7 @@
             <tr>
                 <td>{% if i.item_name %}{{ i.item_name }}{% else %}未查询到商品信息{% endif %}</td>
                 <td>{{ i.item_barcode }}</td>
-                <td>{{ i.c }}</td>
+                <td>{{ i.item_count }}</td>
             </tr>
             {% endfor %}
         </tbody>
