--- a/ubskin_web_django/templates/item/a_item_manage.html
+++ b/ubskin_web_django/templates/item/a_item_manage.html
@@ -50,7 +50,7 @@
         <div class="panel-body">
             <div class="media-left">
                 <a href="#">
-                    <img class="media-object" src="{% get_thumbicon_by_id i.item_id %}" style="width: 100px; height: 100px;">
+                    <img class="media-object" src="{% get_thumbicon_by_id i.photo_id %}" style="width: 100px; height: 100px;">
                 </a>
             </div>
                 <div class="media-body">
