完成用户地址相关接口，将用户订单转移到用户表。

--- a/ubskin_web_django/templates/a_layout.html
+++ b/ubskin_web_django/templates/a_layout.html
@@ -107,7 +107,7 @@
             <li class="item_qr_code_manage"><a href="{% url 'item_qr_Code_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>物码查询</span></a></li>
             <li class="recv_manage"><a href="{% url 'recv_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>收货方管理</span></a></li>
             <li class="user_order_manage"><a href="{% url 'user_order_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>用户订单</span></a></li>
-            <li class="user_recv_addr"><a href=""><i class="fa fa-circle-o text-aqua"></i> <span>用户收货地址</span></a></li>
+            <li class="recv_addr_manage"><a href="{% url 'recv_addr_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>用户收货地址</span></a></li>
           </ul>
         </section>
         <!-- /.sidebar -->
