--- a/ubskin_web_django/templates/member/a_recv_addr_manage.html
+++ b/ubskin_web_django/templates/member/a_recv_addr_manage.html
@@ -79,7 +79,7 @@
                     <tr>
                         <td>{{ data.member_id }}</td>
                         <td>{{ data.member_name }}</td>
-                        <td><a href="#modalItemCodes" data-toggle="modal" data-target="#modalItemCodes" data-batchid="{{ stock.stock_batch_id }}">详情</a></td>
+                        <td><a href="#modalItemCodes" data-toggle="modal" data-target="#modalItemCodes" data-dataid="{{ data.member_id }}">详情</a></td>
                     </tr>
                     {% endfor %}
                   </tbody>
@@ -119,7 +119,16 @@
     <script>
     $(function(){
         $('.recv_addr_manage').addClass('active')
-
+        $('#modalItemCodes').on('show.bs.modal', (e) => {
+            let btn = $(e.relatedTarget);
+            let data_id = btn.data('dataid');
+            $('#id_modal_body').load('{% url "a_jm_stock_batch_info" %}?data_id=' + data_id, (res, status, xhr) => {
+                if (status == "error") {
+                    $('#id_modal_body').html('<p>加载数据时出错, 请稍后再试</p>');
+                    return;
+                }
+            });
+        });  
     })
     
        
