--- a/ubskin_web_django/templates/member/a_recv_addr_manage.html
+++ b/ubskin_web_django/templates/member/a_recv_addr_manage.html
@@ -122,7 +122,7 @@
         $('#modalItemCodes').on('show.bs.modal', (e) => {
             let btn = $(e.relatedTarget);
             let data_id = btn.data('dataid');
-            $('#id_modal_body').load('{% url "a_jm_stock_batch_info" %}?data_id=' + data_id, (res, status, xhr) => {
+            $('#id_modal_body').load('{% url "jm_recv_addr_info" %}?data_id=' + data_id, (res, status, xhr) => {
                 if (status == "error") {
                     $('#id_modal_body').html('<p>加载数据时出错, 请稍后再试</p>');
                     return;
