--- a/ubskin_web_django/templates/a_layout.html
+++ b/ubskin_web_django/templates/a_layout.html
@@ -108,6 +108,7 @@
             <li class="recv_manage"><a href="{% url 'recv_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>收货方管理</span></a></li>
             <li class="user_order_manage"><a href="{% url 'user_order_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>用户订单</span></a></li>
             <li class="recv_addr_manage"><a href="{% url 'recv_addr_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>用户收货地址</span></a></li>
+            <li class="out_order_manage"><a href="{% url 'out_order_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>外部订单数据</span></a></li>
           </ul>
         </section>
         <!-- /.sidebar -->
