--- a/ubskin_web_django/templates/member/a_out_order_manage.html
+++ b/ubskin_web_django/templates/member/a_out_order_manage.html
@@ -118,7 +118,7 @@
 {% block js %}
     <script>
     $(function(){
-        $('.recv_addr_manage').addClass('active')
+        $('.out_order_manage').addClass('active')
         $('#modalItemCodes').on('show.bs.modal', (e) => {
             let btn = $(e.relatedTarget);
             let data_id = btn.data('dataid');
