前后端契合小改

--- a/ubskin_web_django/templates/member/a_jm_user_order_info.html
+++ b/ubskin_web_django/templates/member/a_jm_user_order_info.html
@@ -1,6 +1,6 @@
 <div id="">
     <p><strong>订单单号:{{ data_list.order_num }}</strong></p>
-    <p>收货地址: {{ data_list.recv_addr.address }} - {{ data_list.recv_addr.area }}</p>
+    <p>收货地址: {{ data_list.recv_addr.address }}</p>
     <p></p>
     <hr>
     <p></p>
