--- a/ubskin_web_django/templates/member/a_user_order_manage.html
+++ b/ubskin_web_django/templates/member/a_user_order_manage.html
@@ -95,7 +95,7 @@
             <div class="modal-content" id="id_modal_content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">出库单</h4>
+                <h4 class="modal-title">订单信息</h4>
             </div>
             <div class="modal-body" id="id_modal_body">
                 <p><i class="fa fa-refresh fa-spin" style="font-size: 24px;"></i></p>
