--- a/ubskin_web_django/templates/member/a_recv_addr_manage.html
+++ b/ubskin_web_django/templates/member/a_recv_addr_manage.html
@@ -95,14 +95,14 @@
         </ul>
     </nav>
 </div>
-<div id="modalItemCodes" class="modal fade" tabindex="-1" role="dialog">
+<div id="modalItemCodes" class="modal fade" tabindex="-1" role="dialog" >
     <div class="modal-dialog" role="document">
         <div class="modal-content" id="id_modal_content">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <h4 class="modal-title">用户收货地址</h4>
         </div>
-        <div class="modal-body" id="id_modal_body">
+        <div class="modal-body" id="id_modal_body" style="overflow: auto">
             <p><i class="fa fa-refresh fa-spin" style="font-size: 24px;"></i></p>
         </div>
         <div class="modal-footer">
