--- a/ubskin_web_django/templates/item/a_add_categorie.html
+++ b/ubskin_web_django/templates/item/a_add_categorie.html
@@ -22,8 +22,9 @@
           <span style="color: red">{% if form_errors.categorie_name  %}{{ form_errors.categorie_name }}{% endif %}</span>
         </div>
         <div class="form-group">
-          <label for="cn_name_abridge">类别选择</label>
-          <select name="categorie_type" id="" class="form-control">
+          <label for="cn_name_abridge">类别</label>
+          <input type="text" class="form-control" id="exampleInputEmail1" name="categorie_type" value="{% if form_data.categorie_type %}{{ form_data.categorie_type }}{% endif %}">
+          <!-- <select name="categorie_type" id="" class="form-control">
                 <option value="">--选择类别--</option>
                 {% for key in categorie_choices %}
                     {% if form_data and form_data.categorie_type is not None and form_data.categorie_type == key %}
@@ -32,7 +33,7 @@
                         <option value="{{ key }}">{% get_value_by_key categorie_choices key %}</option>
                     {% endif %}
                 {% endfor %}
-          </select>
+          </select> -->
           <span style="color: red">{% if form_errors.categorie_type %}{{ form_errors.categorie_type }}{% endif %}</span>
         </div>
         <div class="form-group">
