--- a/ubskin_web_django/templates/member/a_user_order_manage.html
+++ b/ubskin_web_django/templates/member/a_user_order_manage.html
@@ -103,7 +103,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title">订单信息</h4>
             </div>
-            <div class="modal-body" id="id_modal_body">
+            <div class="modal-body" id="id_modal_body" style="overflow: auto">
                 <p><i class="fa fa-refresh fa-spin" style="font-size: 24px;"></i></p>
             </div>
             <div class="modal-footer">
