小改页面细节

--- a/ubskin_web_django/templates/member/a_user_order_manage.html
+++ b/ubskin_web_django/templates/member/a_user_order_manage.html
@@ -39,12 +39,12 @@
                     </select>
                 </div>
                 <div class="col-md-6" style="padding-left: 0">
-                    <div class="input-group">
+                    <!-- <div class="input-group"> -->
                         <input type="datetime" class="form-control datetime" name="datetime">
-                        <span class="input-group-btn">
+                        <!-- <span class="input-group-btn">
                             <button class="btn btn-default" type="submit">过滤</button>
-                        </span>
-                    </div>
+                        </span> -->
+                    <!-- </div> -->
                 </div>
             </div>
         </div>
