--- a/ubskin_web_django/templates/item/a_categorie_manage.html
+++ b/ubskin_web_django/templates/item/a_categorie_manage.html
@@ -54,7 +54,9 @@
                 </div>
                 <div class="media-body">
                     <div class="row">
-                        <div class="col-md-10">
+                        <div class="col-md-2"></div>
+                        <div class="col-md-8">
+                            <br>
                             类别：{{ i.categorie_type }}
                         </div>
                         <div class="col-md-2">
